          rescaled videos, what a suprise. Especially caused strange results on Bluray sources,
          created blurred frames if downscaled from HD to SD (or lower) before deinterlacing.
* Bugfix: Avoid EINVAL errors in case the cache file ends up at zero size. Minor problem, but ugly.	  
* Bugfix: Cache structure was not properly initialised, causing invalid values in the database.
* Known bug: Libav support for videos seems broken. Not sure if this will be fixed or Libav be
          simply dropped.

Important changes in 1.96 (2019-11-18)

This is a pre-release towards the new version 2.0 coming up soon.

* Feature: Added version check and auto update to cache database. Older database versions will
           now automatically upgraded to the latest structure.
* Feature: Transcode videos to frame works transparently for any input now (DVD, Bluray and VideoCD).
* Bugfix:  Fix for "prores can't allocate memory #41".
* Bugfix:  Do not shrink cache when reopening it.
* Known bug:

Important changes in 1.95 (2019-05-23)

This is a pre-release towards the new version 2.0 coming up soon.

* Feature: Added transcode videos to frame images option. Video files can be mounted to folders with jpg/png/bmp files for
           each video frame.
* Feature: Reencode to same file format as source file. Normally files that already have the selected output format will not
           be recoded. Added --recodesame option to allow transcoding to the same format.

Important changes in 1.10 (2019-12-XX)

* Support:
* Feature: Added checks for mov/mp4/prores/webm video format.
* Bugfix: Moved video deinterlace filtering before rescaling. Deinterlace does not work properly on
          rescaled videos, what a suprise. Especially caused strange results on Bluray sources,
          created blurred frames if downscaled from HD to SD (or lower) before deinterlacing.
* Bugfix: Avoid EINVAL errors in case the cache file ends up at zero size. Minor problem, but ugly.	  